handle relative refs correctly in xls import, fdo#80091

Change-Id: Ia70f96e1d31e71c56f03c828be0a4e49fff4b198